--- a/frontend/src/pages/methodchunk.scss
+++ b/frontend/src/pages/methodchunk.scss
@@ -1,5 +1,6 @@
 .container {
   overflow-y: scroll;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -11,8 +12,10 @@
   & > .desc {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    min-height: 12%;
-    padding: 10px;
+    padding: 15px;
+    p {
+      margin: 0;
+    }
   }
   & > .element {
     padding: 20px 30px 0 30px;
