--- a/frontend/src/pages/methodchunk.module.scss
+++ b/frontend/src/pages/methodchunk.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0;
   & > .header {
     background-color: #cecece;
     text-align: center;
@@ -21,20 +22,22 @@
     padding: 20px 30px 0 30px;
     .card-deck {
       padding: 0 75px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 150px);
+      grid-gap: 20px;
       a {
-        flex: 0 0 20%;
         .card {
           min-height: 90%;
           margin: 4px;
           padding: 10px;
           display: flex;
           flex-direction: column;
-          .card-img-top {
+          img {
             width: 100px;
             height: 60%;
             margin: 5px auto;
           }
-          .card-text {
+          p {
             text-align: center;
             height: 40%;
             font-size: 0.9em;
