--- a/frontend/src/pages/activity.module.scss
+++ b/frontend/src/pages/activity.module.scss
@@ -1,8 +1,10 @@
 .container {  
   overflow-y: scroll;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0;
   & > .header {
     background-color: #cecece;
     text-align: center;
@@ -14,18 +16,45 @@
     padding: 10px;
   }
   & > .content {
-    height: 65vh;
-    overflow-y: scroll;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     & > .states {
       border-left: 1px solid black;
-      padding-left: 30px;
-      padding-top: 30px;
+      //padding: 25px 15px;
+      width: 35%;
+      font-size: 0.85rem;
+      .activity-space {
+        padding: 20px 15px;
+        border-bottom: 1px solid black;
+        img {
+          width: 80px;
+          margin: 10px 0;
+        }
+      }
+      .relations {
+        padding: 20px 15px;
+        & > div {
+          padding: 0 30px;
+        }
+        img {
+          width: 120px;
+          height: 80px;
+        }
+        & > .required {
+          margin-bottom: 30px;
+        }
+      }
     }
     & > .contain {
+      width: 65%;
       & > .element {
         padding: 20px 30px 0 30px;
         .card-deck {
           padding: 0 50px;
+          display: grid;
+          grid-template-columns: repeat(auto-fit, 150px);
+          grid-gap: 20px;
           .card {
             flex: 0 0 31%;
             height: 300px;
@@ -34,16 +63,19 @@
             display: flex;
             flex-direction: column;
             text-align: center;
-            font-size: 0.9em;
-            .card-img-top {
-              width: 100px;
-              height: 75px;
+            font-size: 0.8em;
+            word-break: break-word;
+            .img {
               margin: 5px auto;
             }
             ul {
               padding: 0;
-              width: 100px;
               margin: auto;
+              list-style: none;
+            }
+            ul li::before {
+              content: '■ ';
+              color: red;
             }
           }
         }
