--- a/frontend/src/pages/pattern.module.scss
+++ b/frontend/src/pages/pattern.module.scss
@@ -1,8 +1,10 @@
 .container {
   overflow-y: scroll;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0;
   & > .header {
     background-color: #cecece;
     text-align: center;
@@ -14,13 +16,18 @@
     padding: 10px;
   }
   & > .content {
-    height: 65vh;
-    overflow-y: scroll;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     & > .contain {
+      width: 100%;
       & > .element {
         padding: 20px 30px 0 30px;
         .card-deck {
           padding: 0 50px;
+          display: grid;
+          grid-template-columns: repeat(auto-fit, 187px);
+          grid-gap: 20px;
           .card {
             flex: 0 0 28%;
             height: 100%;
@@ -30,9 +37,7 @@
             flex-direction: column;
             text-align: center;
             font-size: 0.9em;
-            .card-img-top {
-              width: 100px;
-              height: 40%;
+            img {
               margin: 5px auto;
             }
           }
