--- a/frontend/src/pages/methodchunk.module.scss
+++ b/frontend/src/pages/methodchunk.module.scss
@@ -20,6 +20,18 @@
   }
   & > .element {
     padding: 20px 30px 0 30px;
+    table, td, th {
+      border: 1px solid black;
+      padding: 10px;
+      text-align: center;
+    }
+    table {
+      margin: 0 75px;
+      min-width: 600px;
+    }
+    thead {
+      background-color: #E0E0E0;
+    }
     .card-deck {
       padding: 0 75px;
       display: grid;
