Add link for each elements

--- a/frontend/src/containers/alpha/alpha.module.scss
+++ b/frontend/src/containers/alpha/alpha.module.scss
@@ -63,6 +63,11 @@
           display: grid;
           grid-template-columns: repeat(auto-fit, 150px);
           grid-gap: 20px;
+          margin-bottom: 10px;
+          &--bigger {
+            grid-template-columns: repeat(auto-fit, 200px);
+            grid-gap: 2 0px;
+          }
           .card {
             flex: 0 0 28%;
             height: 100%;
@@ -75,8 +80,14 @@
             p {
               font-size: 0.8rem;
             }
-            .img {
+            img {
               margin: 5px auto;
+              width: 120px;
+              height: 100px;
+            }
+            ul {
+              padding-left: 20px;
+              text-align: left;
             }
           }
         }
