Make style of work product in activity page different than alpha

--- a/frontend/src/containers/alpha/alpha.module.scss
+++ b/frontend/src/containers/alpha/alpha.module.scss
@@ -70,7 +70,7 @@
           }
           .card {
             flex: 0 0 28%;
-            height: 100%;
+            height: auto;
             margin: 4px;
             padding: 10px;
             display: flex;
