--- a/frontend/src/containers/activity/activity.module.scss
+++ b/frontend/src/containers/activity/activity.module.scss
@@ -55,9 +55,14 @@
           display: grid;
           grid-template-columns: repeat(auto-fit, 150px);
           grid-gap: 20px;
+          margin-bottom: 10px;
+          &--bigger {
+            grid-template-columns: repeat(auto-fit, 200px);
+            grid-gap: 2 0px;
+          }
           .card {
             flex: 0 0 31%;
-            height: 300px;
+            height: auto;
             margin: 4px;
             padding: 10px;
             display: flex;
@@ -70,12 +75,11 @@
             }
             ul {
               padding: 0;
-              margin: auto;
               list-style: none;
-            }
-            ul li::before {
-              content: '■ ';
-              color: red;
+              li::before {
+                content: '■ ';
+                color: red;
+              }
             }
           }
         }
