Change elements logo from PNG to SVG

--- a/frontend/src/containers/methodchunk/methodchunk.module.scss
+++ b/frontend/src/containers/methodchunk/methodchunk.module.scss
@@ -46,7 +46,7 @@
           flex-direction: column;
           img {
             width: 120px;
-            height: 60%;
+            height: 100px;
             margin: 5px auto;
           }
           p {
