--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+a:link, a:visited, a:hover, a:active {
+	text-decoration: none;
+	color: black;
+}
