--- a/frontend/src/containers/methodchunk/methodchunk.module.scss
+++ b/frontend/src/containers/methodchunk/methodchunk.module.scss
@@ -21,16 +21,25 @@
   & > .element {
     padding: 20px 30px 0 30px;
     table, td, th {
-      border: 1px solid black;
+      border: 1px solid #ccc;
       padding: 10px;
       text-align: center;
+      border-collapse: collapse;
     }
     table {
       margin: 0 75px;
       min-width: 600px;
-    }
-    thead {
-      background-color: #E0E0E0;
+      thead {
+        background-color: #ccc;
+      }
+      tbody {
+        tr:nth-child(even) {
+          background-color: #efefef;
+        }
+        tr:hover {
+          background-color: #ccc;
+        }
+      }
     }
     .card-deck {
       padding: 0 75px;
