Apply better typography to the whole website

--- a/frontend/src/containers/methodchunk/methodchunk.module.scss
+++ b/frontend/src/containers/methodchunk/methodchunk.module.scss
@@ -13,10 +13,7 @@
   & > .desc {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    padding: 15px;
-    p {
-      margin: 0;
-    }
+    padding: 20px 30px 5px 30px;
   }
   & > .element {
     padding: 20px 30px 0 30px;
