--- a/frontend/src/containers/alpha/alpha.module.scss
+++ b/frontend/src/containers/alpha/alpha.module.scss
@@ -13,7 +13,7 @@
   & > .desc {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    padding: 10px;
+    padding: 20px 30px 5px 30px;
   }
   & > .content {
     display: flex;
@@ -35,8 +35,11 @@
             margin-bottom: 0.4rem;
           }
           .checklist {
+            display: flex;
+            flex-direction: row;
             input[type='checkbox'] {
               margin-right: 0.5rem;
+              margin-top: 5px;
             }
           }
         }
@@ -50,7 +53,7 @@
           height: 20px;
           border-radius: 50%;
           text-align: center;
-          margin-right: 40px; 
+          margin-right: 15px; 
         }
       }
     }
@@ -82,6 +85,7 @@
             ul {
               padding-left: 20px;
               text-align: left;
+              font-size: 0.8rem;
             }
           }
         }
