--- a/frontend/src/containers/pattern/pattern.module.scss
+++ b/frontend/src/containers/pattern/pattern.module.scss
@@ -13,7 +13,7 @@
   & > .desc {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    padding: 10px;
+    padding: 20px 30px 5px 30px;
   }
   & > .content {
     display: flex;
