--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,3 +14,36 @@ a:link, a:visited, a:hover, a:active {
 	text-decoration: none;
 	color: black;
 }
+
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Prompt', sans-serif;
+}
+
+h2 { /* header logo */
+  color: #343434;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+h3 { /* method chunk name/title */
+  color: #343434;
+  font-weight: normal;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-shadow: 0 2px #d2d2d2, 0 3px #777;
+}
+
+h4 { /* elemen title */
+  margin: 0 0 0.75em 0;
+  color: #343434;
+  line-height: 40px;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-style: italic;
+}
+
